tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (1 errors) ====
    var v = { [yield]: foo }
              ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.